# PacMan-GK

./: .gitignore  BlueGhost.cpp  BlueGhost.h  CMakeLists.txt  CollisionManager.cpp  CollisionManager.h  GameCharacter.cpp  GameCharacter.h  GameManager.cpp  GameManager.h  Ghost.cpp  Ghost.h  Map.cpp  Map.h  MovementHandler.cpp  MovementHandler.h  Obstacle.cpp  Obstacle.h  OrangeGhost.cpp  OrangeGhost.h  Pacman.cpp  Pacman.h  PinkGhost.cpp  PinkGhost.h  README.md  RedGhost.cpp  RedGhost.h  RenderManager.cpp  RenderManager.h  TextManager.cpp  TextManager.h  TextureManager.cpp  TextureManager.h  Tile.cpp  Tile.h  eventHandler.cpp  eventHandler.h  main.cpp  renderManager.cpp  renderManager.h  (+4 more)
Characters/: BlueGhost.cpp  GameCharacter.cpp  GameCharacter.h  Ghost.cpp  Ghost.h  OrangeGhost.cpp  Pacman.cpp  Pacman.h  PinkGhost.cpp  RedGhost.cpp
Characters/Ghosts/: BlueGhost.cpp  BlueGhost.h  OrangeGhost.cpp  OrangeGhost.h  PinkGhost.cpp  PinkGhost.h  RedGhost.cpp  RedGhost.h
Eksamen C++ Pacman/: GameManager.cpp  GameManager.h  renderManager.h  windowLoader.cpp  windowLoader.h
Eksamen C++ Pacman/Debug/: Eksamen C++ Pacman.ilk  vc142.idb
Eksamen C++ Pacman/Debug/Eksamen .FCFE48EB.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Eksamen C++ Pacman.lastbuildstate  link.read.1.tlog  link.write.1.tlog
EksamenC++Pacman/: Eksamen C++ Pacman.sln  Eksamen C++ Pacman.vcxproj  Eksamen C++ Pacman.vcxproj.filters  TextureManager.cpp  TextureManager.h  renderManager.cpp
EksamenC++Pacman/Debug/Eksamen .FCFE48EB.tlog/: link.command.1.tlog
EksamenC++Pacman/x64/Debug/: vc142.idb
EksamenC++Pacman/x64/Debug/Eksamen .FCFE48EB.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Eksamen C++ Pacman.lastbuildstate
Managers/: CollisionManager.cpp  CollisionManager.h  GameManager.cpp  GameManager.h  MovementManager.cpp  MovementManager.h  RenderManager.cpp  RenderManager.h  SoundManager.cpp  SoundManager.h  TextManager.cpp  TextManager.h  WindowLoader.cpp  WindowLoader.h
Resources/: mainLevel.txt
Resources/Levels/: Level_layout_2.txt
